[package]
name = "rust_axum_loan_system"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = "0.9.6"
chrono = "0.4.39"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }

dotenv = "0.15.0"
dotenvy_macro = "0.15.7"
http = "1.2.0"

tower-http  = { version ="0.6.2", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
# Cargo.toml
futures = "0.3.31"
sea-orm = { version = "1.1.2", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
